--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -11,7 +11,7 @@ body{
 	padding: 10px;
 }
 .menu{
-	height: 10px;
+	height:50px;
 	
 }
 .contenido{
@@ -27,4 +27,5 @@ p{
 
 /* div {
 	border: 1px solid black;
-} */
+}
+ */
